<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/title_text_view"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/money_count_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/money_count_text_view"
        android:textColor="@color/black"
        android:textSize="@dimen/money_count_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />


    <ImageView
        android:id="@+id/five_cents_image_view"
        android:layout_width="@dimen/coin_image_size"
        android:layout_height="@dimen/coin_image_size"
        android:layout_marginTop="@dimen/element_spacing"
        android:contentDescription="@string/five_cents_coin_image_description"
        app:layout_constraintEnd_toStartOf="@+id/dime_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money_count_text_view"
        app:srcCompat="@drawable/five_cents" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five_cents_text_view"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/five_cents_image_view"
        app:layout_constraintStart_toStartOf="@+id/five_cents_image_view"
        app:layout_constraintTop_toBottomOf="@+id/five_cents_image_view" />

    <ImageView
        android:id="@+id/dime_image_view"
        android:layout_width="@dimen/coin_image_size"
        android:layout_height="@dimen/coin_image_size"
        android:layout_marginTop="@dimen/element_spacing"
        android:contentDescription="@string/ten_cents_coin_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/five_cents_image_view"
        app:layout_constraintTop_toBottomOf="@+id/money_count_text_view"
        app:srcCompat="@drawable/ten_cents" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dime_text_view"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/dime_image_view"
        app:layout_constraintStart_toStartOf="@+id/dime_image_view"
        app:layout_constraintTop_toBottomOf="@+id/dime_image_view" />


    <ImageView
        android:id="@+id/quarter_image_view"
        android:layout_width="@dimen/coin_image_size"
        android:layout_height="@dimen/coin_image_size"
        android:layout_marginTop="@dimen/element_spacing"
        android:contentDescription="@string/twenty_five_cents_coin_image_description"
        app:layout_constraintEnd_toStartOf="@+id/dollar_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/five_cents_image_view"
        app:srcCompat="@drawable/quarter" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quarter_text_view"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/quarter_image_view"
        app:layout_constraintStart_toStartOf="@+id/quarter_image_view"
        app:layout_constraintTop_toBottomOf="@+id/quarter_image_view" />

    <ImageView
        android:id="@+id/dollar_image_view"
        android:layout_width="@dimen/coin_image_size"
        android:layout_height="@dimen/coin_image_size"
        android:layout_marginTop="@dimen/element_spacing"
        android:contentDescription="@string/one_dollar_coin_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quarter_image_view"
        app:layout_constraintTop_toBottomOf="@+id/dime_image_view"
        app:srcCompat="@drawable/one_dollar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar_text_view"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/dollar_image_view"
        app:layout_constraintStart_toStartOf="@+id/dollar_image_view"
        app:layout_constraintTop_toBottomOf="@+id/dollar_image_view" />

</androidx.constraintlayout.widget.ConstraintLayout>